src/style.css
@import url(./views/StartPage/StartPage.css);
@import url(./views/Categories/Categories.css);
@import url(./views/Levels/Levels.css);
@import url(./components/BackButton/Backbutton.css);
@import url(./components/RadioOption/RadioOption.css);
@import url(./components/SubmitButton/SubmitButton.css);
@import url(./views/UserProfile/UserProfile.css);
@import url(./views/Quiz/Quiz.css);
@import url(./components/Avatar/Avatar.css);
@import url(./views/Gameover/Gameover.css);
@import url(./views/Rules/Rules.css);

@font-face {
  font-family: "SF Pro Display";
  src: url("/fonts/SF Pro Display Regular.woff2") format("woff2");
  font-weight: 400;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "SF Pro Display";
  src: url("/fonts/SF Pro Display Medium.woff2") format("woff2");
  font-weight: 500;
  font-style: normal;
  font-display: swap;
}

@font-face {
  font-family: "SF Pro Display";
  src: url("/fonts/SF Pro Display Bold.woff2") format("woff2");
  font-weight: 600;
  font-style: normal;
  font-display: swap;
}

:root {
  /*--bg-gradient-start: rgb(255, 222, 204);
  --bg-gradient-end: rgb(182, 205, 233);
  --text-color: rgb(19, 19, 19);*/

  --app-max-width: 900px;
  --header-height: 60px;

  --font-primary: "SF Pro Display", -apple-system, BlinkMacSystemFont,
    "Segoe UI", Roboto, Helvetica, Arial, sans-serif;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

html {
  padding: 0;
  background-attachment: fixed;
  background-repeat: no-repeat;
  overflow-x: hidden;

  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

body {
  font-family: var(--font-primary);
  color: var(--text-color);
  margin: 0;
  min-height: 100dvh;
  padding: 0;
  padding-bottom: env(safe-area-inset-bottom, 0px);
  background: transparent;
  display: flex;
  flex-direction: column;
 
}

#root {
  width: 100%;
  min-height: 100dvh;
  display: flex;
  flex-direction: column;

}

.main {
  width: 100%;
  max-width: var(--app-max-width);
  margin: 0 auto;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 2vh clamp(1rem, 5vw, 2rem) 2vh clamp(1rem, 5vw, 2rem);
}

.no-scrollbar::-webkit-scrollbar {
  display: none;
}

.no-scrollbar {
  -ms-overflow-style: none;
  -webkit-scrollbar-width: none;
  scrollbar-width: none;
}

